tests/compiler_directive/errors/undefined_variable.out
error: undefined_variable.li 1,9: compiler variable `undefined` is not defined
    1 | println(# undefined #)
      |         ^^^^^^^^^^^^^
